# article-video-content

./: -UIUX-.html  .gitignore  1.js  1.md  2.js  2.md  3.js  DESIGN_SYSTEM.md  DESIGN_SYSTEM_DARK.md  Design.md  IT咖啡馆.json  README.md  ai呀蔡蔡.json  config.toml  package-lock.json  package.json  pnpm-lock.yaml  tmpclaude-348f-cwd  tsconfig.json  uno.config.ts  up_videos_db_backup_1770135516003.json  习惯研究社.json  深度进化Theo.json  炒股养家 大 V.json  炒股养家.json  玄离199.json  阿甘探AI.json
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.vue  env.d.ts  style.css
data/: KEEPER.json  Next蔡蔡.json  app_database.json  author.json  夏鹏.json  程序员三千.json  远方os.json  阿丽.json
docs/: Design.md  UI设计草图.md  webdav-implementation-plan.md  webdav-simple-plan.md
examples/: VideoManager.vue  VideoManagerTauri.vue
scripts/: VSCode插件下载脚本.js  demand.md  request-script-cli.ts  rust.md  sync-cli.ts  userequire.md  抖音视频采集.js
src/: App.vue  app-database-repository.ts  app-database.ts  app-ops.ts  index.ts  local-db.ts  main.ts  parse.ts  repository.ts  request-script.ts  sync.ts  types.ts  write-file-atomic.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css
src/components/ui/: Button.vue  Card.vue  Input.vue
src/layouts/: AppLayout.vue  BasicLayout.vue
src/lib/: utils.ts
src/router/: index.ts
src/tauri/: app-database-repository.ts  repository.ts  shims.d.ts
src/views/: Settings.vue  VideoManager.vue
test/: appDatabase.test.ts  syncVideoData.test.ts
